update status for orders

--- a/client/src/components/Orders/OrderListFooter/styles/_order-list-footer.scss
+++ b/client/src/components/Orders/OrderListFooter/styles/_order-list-footer.scss
@@ -2,4 +2,9 @@
      width: 150px;
      height: 30px;
      background-color: var(--orange);
+     &:hover{
+          color: var(--white);
+          background-color: var(--black);
+          cursor: pointer;
+     }
 }
