--- a/client/src/components/Base/Admin/AdminProducts/styles/_product-info.scss
+++ b/client/src/components/Base/Admin/AdminProducts/styles/_product-info.scss
@@ -8,7 +8,7 @@
      flex-direction: column;
      margin-top: 10px;
      width: 105%;
-     overflow: scroll;
+     overflow-y: scroll;
      height: 500px;
      .products__info__titles{
 
