start modifying search

--- a/client/src/components/Base/User/register/_register.scss
+++ b/client/src/components/Base/User/register/_register.scss
@@ -14,6 +14,10 @@
           align-items: center;
           flex-wrap: wrap;
           align-items: center;
+          p{
+               font-size: 15px;
+               padding: 15px 0px;
+          }
           .block__item{
                width: 100%;
                .name__block__header{
