--- a/client/src/components/Orders/Evaluate/EvaluateContent/styles/_evaluate-content.scss
+++ b/client/src/components/Orders/Evaluate/EvaluateContent/styles/_evaluate-content.scss
@@ -1,93 +1,99 @@
-.product__review__content{
-     padding: 23px 30px;
-     border: 2px solid #e7e5e5;
-     margin-top: 15px;
-     border-radius: 10px;
-     .picture__item{
-          width: 13%;
-          img{
-               width: 100%;
-               height: auto;
+.product__review{
+     .product__review__content{
+          padding: 23px 30px;
+          border: 2px solid #e7e5e5;
+          margin-top: 15px;
+          border-radius: 10px;
+          .picture__item{
+               width: 13%;
+               img{
+                    width: 100%;
+                    height: auto;
+               }
+          }
+          .product_desc{
+               padding: 10px 0;
+          }
+          .product__review__info{
+               font-size: 14px;
+               color: #818181;
+               padding: 10px 0;
+          }
+          .product__review__add{
+               padding: 10px 0;
+               a{
+                    text-decoration: none;
+                    font-size: 15px;
+                    color: #8f8f8f;
+               }
+          }
+          .product__rating__add{
+               padding: 10px 0;
+               .rating__info{
+                    display: flex;
+                    padding: 5px 0;
+                    color: #676767;
+               }
+               .review__bad{
+                    margin-right: 5px;
+               }
+               .review__good{
+                    margin-left: 5px;
+               }
+               .product__rating{
+                    .star{
+                         width: 50px;
+                         height: 50px;
+                         color: var(--orange);
+                         font-size: 25x;
+                         cursor: pointer;
+                    }
+                    .full{
+                         
+                         &::before{
+                              content:"\2605";
+                         }
+                    }
+                    .empty{
+                         color: #000;
+                         &::before{
+                              content:"\2606";
+                         }
+                         
+                    }
+               }
+          }
+     
+          .product__review__text{
+               p{
+                    padding:  5px 0;
+               }
+               textarea{
+                    width: 91%;
+                    height: 75px;
+               }
+          }
+     }
+     .user__info{
+          input{
+               width: 41.9%;
+               height: 40px;
+               margin: 10px ;
+               padding: 0 10px;
+               &:first-child{
+                    margin-left: 0;
+               }
+          }
+          .continue{
+               width: 105px;
+               height: 44px;
+               font-size: 14px;
+               color: var(--white);
+               background-color: var(--black);
+               padding: 11px 15px;
+               cursor: pointer;
           }
      }
 
-     .product__review__info{
-          font-size: 14px;
-          color: #818181;
-          padding: 10px 0;
-     }
-     .product__review__add{
-          padding: 10px 0;
-          a{
-               text-decoration: none;
-               font-size: 15px;
-               color: #8f8f8f;
-          }
-     }
-     .product__rating__add{
-          padding: 10px 0;
-          .rating__info{
-               display: flex;
-               padding: 5px 0;
-               color: #676767;
-          }
-          .review__bad{
-               margin-right: 5px;
-          }
-          .review__good{
-               margin-left: 5px;
-          }
-          .product__rating{
-               .star{
-                    width: 50px;
-                    height: 50px;
-                    color: var(--orange);
-                    font-size: 25x;
-                    cursor: pointer;
-               }
-               .full{
-                    
-                    &::before{
-                         content:"\2605";
-                    }
-               }
-               .empty{
-                    color: #000;
-                    &::before{
-                         content:"\2606";
-                    }
-                    
-               }
-          }
-     }
+}
 
-     .product__review__text{
-          p{
-               padding:  5px 0;
-          }
-          textarea{
-               width: 91%;
-               height: 75px;
-          }
-     }
-}
-.user__info{
-     input{
-          width: 41.9%;
-          height: 40px;
-          margin: 15px ;
-          padding: 0 10px;
-          &:first-child{
-               margin-left: 0;
-          }
-     }
-     .continue{
-          width: 105px;
-          height: 44px;
-          font-size: 14px;
-          color: var(--white);
-          background-color: var(--black);
-          padding: 11px 15px;
-          cursor: pointer;
-     }
-}
