--- a/client/src/components/ProductPage/ProductReview/styles/_product-review-main.scss
+++ b/client/src/components/ProductPage/ProductReview/styles/_product-review-main.scss
@@ -1,6 +1,6 @@
 .product__review__container{
      height: 410px;
      border: 1px solid #c2c2c2;
-
+    overflow: auto;
     // background-color: aqua;
 }
