add client feedbacks in home page

--- a/client/src/components/Home/ClientFeedback/styles/_client-feedback-header.scss
+++ b/client/src/components/Home/ClientFeedback/styles/_client-feedback-header.scss
@@ -18,6 +18,7 @@
                height: 15px;
                display: flex;
                margin-left: 35px;
+               cursor: pointer;
                .circle{
                     width: 5px;
                     height: 5px;
