--- a/client/src/components/Orders/Evaluate/EvaluateContent/styles/_evaluate-content.scss
+++ b/client/src/components/Orders/Evaluate/EvaluateContent/styles/_evaluate-content.scss
@@ -73,6 +73,12 @@
                     height: 75px;
                }
           }
+          .product__review__picture{
+               padding: 10px 0;
+               &__header{
+                    padding: 5px 0;
+               }
+          }
      }
      .user__info{
           input{
