--- a/client/src/components/ProductPage/ProductContent/ProductDesc/styles/_product-desc.scss
+++ b/client/src/components/ProductPage/ProductContent/ProductDesc/styles/_product-desc.scss
@@ -10,7 +10,7 @@
           align-items: center;
           justify-content: flex-start;
           border-bottom: 1px solid #ccc;
-          .reviews{
+          .reviews__desc{
                margin-left: 15px;
                font-size: 12px;
                a{
