--- a/client/src/components/Products-details/CategoriesPanel/FeaturedProduct/styles/_featured-products.scss
+++ b/client/src/components/Products-details/CategoriesPanel/FeaturedProduct/styles/_featured-products.scss
@@ -1,5 +1,6 @@
 .featured__products{
      .featured__products__header{
+
           height: 30px;
           width: 100%;
           padding: 5px 10px 5px 5px;
@@ -7,6 +8,7 @@
           color: var(--white);
           display: flex;
           align-items: center;
+          justify-content: center;
      }
      .featured__product{
           display: flex;
