--- a/client/src/components/Base/User/cabinet/page/user-data/styles/_user-data.scss
+++ b/client/src/components/Base/User/cabinet/page/user-data/styles/_user-data.scss
@@ -8,7 +8,7 @@
      align-content: center;
      flex-direction: column;
      .avatar{
-          width: 120px;
+          width: 150px;
           height: auto;
           border-radius: 50%;
           input[type=file]{
@@ -24,9 +24,9 @@
           }
      }
      .user__data{
-          &:nth-child(even){
+          width: 200px;
+          p{
                padding: 10px 0;
-
           }
 
      }
