update and delete reviews from users

--- a/client/src/components/Base/User/cabinet/menu-bar/styles/_cabinet-header.scss
+++ b/client/src/components/Base/User/cabinet/menu-bar/styles/_cabinet-header.scss
@@ -1,5 +1,6 @@
 .user__page__settings_list{
      display: flex;
+     width: 15%;
      .user_nav{
           margin-top: 20px;
           .user_nav_items{
