--- a/client/src/components/Home/LatestBlog/styles/_latest-blog-content.scss
+++ b/client/src/components/Home/LatestBlog/styles/_latest-blog-content.scss
@@ -7,32 +7,79 @@
           height: 480px;
           background-color: #fff;
           display: flex;
-          margin-top: 25px;
+          gap: 25px;
           .latest__blog__item{
                width: 31.4%;
                height: 480px;
                background-color: #fff;
-               &:not(&:first-child){
-                    margin-left: 24px;
-               }
-               .latest__blog__item__picture{
-                    width: 100%;
-                    height: 230px;
-                    background-color: #969696;
+               text-align: center;
+               display: flex;
+               justify-content: center;
+               flex-direction: column;
+               overflow: hidden;
+               position: relative;
+
+               .latest__blog__item__pictures{
+                    //width: 600px;
+                    display: flex;
+                    flex-direction: row;
                     position: relative;
+                    transition: left 0.75s ease-in-out;
+                    .latest__blog__item__picture{
+                         
+                         img{
+                              width: 381px;
+                              height: 230px;
+                         }
+
+                    }
+               }
+               .arrows{
+                    position: relative;
+                    bottom: 25%;
+                    width: 100%;
+                    .arrow-left{
+                         background-color: #9d9d9d;
+                         width: 30px;
+                         position: absolute;
+                         left: 0;
+                         top: 0;
+                         &:hover{
+                              background-color: #2a2a2a;
+                              cursor: pointer;
+                         }
+                         img{
+                              width: 30px;
+                              height: 30px;
+                         }
+                    }
+                    .arrow-right{
+                         background-color: #9d9d9d;
+                         width: 30px;
+                         position: absolute;
+                         right:0;
+                         top: 0;
+                         
+                         &:hover{
+                              background-color: #2a2a2a;
+                              cursor: pointer;
+                         }
+                         img{
+                              width: 30px;
+                              height: 30px;
+                         }
+                    }
                }
                .latest__blog__item__title{
                     background-color: #fff;
-                    width: 83%;
+                    width:100%;
                     height: 48px;
-                    position: absolute;
-                    bottom: 0;
-                    left: 9%;
-                    display: flex;
-                    justify-content: space-around;
-                    align-items: center;
                     font-size: 13px;
                     color: #676767;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: space-around;
+                    align-items: center;
                     img{
                          width: 15px;
                          height: auto;
@@ -40,15 +87,12 @@
                          vertical-align: middle;
                     }
                }
-               .latest__blog__item__desc{
-                    width: 83%;
-                    background-color: #fff;
-                    position: relative;
+
                     .latest_blog_content {
                          background-color: #fff;
-                         position: absolute;
+                        
                          width: 100%;
-                         left: 11%;
+
                          cursor: pointer;
                          .item-desc-title{
                               padding: 15px 0;
@@ -61,8 +105,7 @@
                               line-height: 1.3;
                          }
                          .latest-blog-footer {
-                              position: absolute;
-                              left: 30%;
+                             
                               .latest_blog_button{
                                    width: 130px;
                                    height: 30px;
@@ -70,6 +113,7 @@
                                    margin-top: 30px;
                                    left: 10px;
                                    color: #fff;
+                                   cursor: pointer;
                               }
                          }
                          &:hover .latest_blog_button{
@@ -79,8 +123,6 @@
                               color: #d58e32;
                          }
                     }
-                   
-               }
           }
      }
      
