--- a/client/src/components/Home/LatestBlog/styles/_latest-blog-header.scss
+++ b/client/src/components/Home/LatestBlog/styles/_latest-blog-header.scss
@@ -1,5 +1,4 @@
 .latest__blog__header{
-     
      .latest-blog-header{
           font-size: 20px;
           color: #d58e32;
@@ -20,6 +19,7 @@
                display: flex;
                margin-left: 35px;
                .circle{
+                    cursor: pointer;
                     width: 5px;
                     height: 5px;
                     padding: 5px;
