--- a/client/src/components/Home/Special-Offers/styles/_mostest-products.scss
+++ b/client/src/components/Home/Special-Offers/styles/_mostest-products.scss
@@ -1,6 +1,7 @@
 .furniture__gallery{
      width: 50%;
      height: auto;
+     
      .furniture__gallery__header{
           font-size: 20px;
           color: #d58e32;
@@ -31,13 +32,12 @@
      }
      .offers-informations{
           width: 100%;
-          height: 400px;
+          height: 440px;
           position: relative;
           .current-offer{
-               width: 100%;
+               width: 80%;
                height: 440px;
                position: absolute;
-               background-color: #f4f5f7;
           }
           .offers-panels{
                display: flex;
@@ -81,6 +81,10 @@
                     .button-favorite{
                          width: 30px;
                          height: 26px;
+                         cursor: pointer;
+                         &:hover{
+                              background-color: var(--orange);
+                         }
                          &::before{
                               content: "\2661" ;
                          }
@@ -90,7 +94,7 @@
                          width: 30px;
                          height: 26px;
                          &::before{
-                              content: "\21C4" ;
+                              content: "\1F6D2" ;
                          }
                     }
                     .button-eyes{
@@ -108,8 +112,13 @@
                          vertical-align: middle;
                          width: 30px;
                          height: 26px;
+                         cursor: pointer;
                          &::before{
-                              content: "\1F441" ;
+                              content: "\1F6D2" ;
+                         }
+                         &:hover{
+                              background-color: var(--orange);
+
                          }
                     }
                    
@@ -117,8 +126,8 @@
                          position: relative;
                          background-color: red;
                          height: 22px;
-                         .add-cart{
-                              width: 80px;
+                         .add-buttons{
+                              width: 90px;
                               height: 22px;
                               background-color: #2a2a2a;
                               font-size: 12px;
@@ -164,7 +173,7 @@
                               padding: 20px 10px;
                               margin-bottom: -10px;
                               z-index: 9999;
-                         
+                              width: 70px;
                          .new-offer-price{
                               font-size: 20px;
                               font-weight: 300;
