--- a/client/src/components/Home/Special-Offers/styles/_special-offers.scss
+++ b/client/src/components/Home/Special-Offers/styles/_special-offers.scss
@@ -1,3 +1,3 @@
 @import './special-offers-main.scss';
-@import './furniture-gallery.scss';
+@import './mostest-products';
 @import './special-offer.scss';
