create product ratings by count

--- a/client/src/components/ProductPage/ProductReview/styles/_product-review-header.scss
+++ b/client/src/components/ProductPage/ProductReview/styles/_product-review-header.scss
@@ -1,4 +1,5 @@
 .product__review__header{
+     border-bottom: 1px solid #c2c2c2;
      .product__review__items{
           display: flex;
           
