--- a/client/src/components/Products-details/CategoriesPanel/FeaturedProduct/styles/_featured-products.scss
+++ b/client/src/components/Products-details/CategoriesPanel/FeaturedProduct/styles/_featured-products.scss
@@ -48,6 +48,7 @@
                     border: 0ch;
                     margin-top: 15px;
                     color: var(--white);
+                    cursor: pointer;
                }
           }
           &:hover{
