--- a/client/src/components/Home/HotDealsCarousel/Carousel/styles/_carousel-main.scss
+++ b/client/src/components/Home/HotDealsCarousel/Carousel/styles/_carousel-main.scss
@@ -4,8 +4,26 @@
      margin-left: 20px;
      position: relative;
       overflow: hidden;
-     &:hover{
+      &:hover{
           
+          .shop-now{
+               width: 110px;
+               height: 40px;
+               background-color: #fff;
+               color: #2a2a2a;
+               cursor: pointer;
+               border-width: 0;
+               font-size: 14px;
+               position: absolute;
+               left: 45%;
+               top: 70%;
+               font-family: 'Poppins', Arial, Sans-Serif;
+               &:hover{
+                    background-color: #d58e32;
+                    color: var(--white);
+               }
+
+          }
      }
      .current__picture{
           width: 100%;
@@ -21,7 +39,7 @@
           left: 0;
           top: 0;
           width: 3 * 890.55px;
-         
+      
           .carousel__body{
                width: 890px;
                height: 450px;
@@ -36,6 +54,7 @@
                          display: inline-block;
                          z-index: 0;
                     }
+                    
 
                }
                .carousel__content{
@@ -61,23 +80,6 @@
           }
      }
    
-     .shop-now{
-          width: 110px;
-          height: 40px;
-          background-color: #fff;
-          color: #2a2a2a;
-          cursor: pointer;
-          border-width: 0;
-          font-size: 14px;
-          position: absolute;
-          left: 45%;
-          top: 70%;
-          font-family: 'Poppins', Arial, Sans-Serif;
-          &:hover{
-               background-color: #d58e32;
-          }
-
-     }
      .carousel__buttons{
           
           position: absolute;
