first iteration off footer

--- a/client/src/components/Base/Footer/styles/_footer-top.scss
+++ b/client/src/components/Base/Footer/styles/_footer-top.scss
@@ -1,12 +1,18 @@
 .footer__top{
      display: flex;
      margin-top: 10px;
+     justify-content: space-between;
      .footer__row{
-          margin:45px 75px;
           .footer__row__categories{
                .footer__row__category{
-     
-                    padding: 5px 0;
+                    a{
+                         color: #a9a9a9;
+                         text-decoration: none;
+                         &:hover{
+                              text-decoration: underline;
+                         }
+                    }
+                    padding: 10px 0;
                     color: #a9a9a9;
                     &:first-child{
                          font-size: 20px;
