--- a/client/src/components/Home/Collections/styles/_guest-room.scss
+++ b/client/src/components/Home/Collections/styles/_guest-room.scss
@@ -1,106 +1,169 @@
-.collections__container{
-     margin-top: 24px;
-     display: flex;
-     .guest__room{
-          width: 48.35%;
-          height: 330px;
-          background-color: #6a6a6a;
-          position: relative;
-          .guest__room__sofa{
-               width: 85%;
-               height: 250px;
-               background-color: #505050;
-               position: absolute;
-               left: 30px;
-               top: 25px;
+.collections{ 
+     .collections-header{
+          font-size: 20px;
+          color: #d58e32;
+          font-weight: 500;
+          .collections__line__circles{
                display: flex;
-               flex-direction: column;
-               align-content: space-around;
-               justify-content: flex-end;
-               align-items: flex-start;
-               flex-wrap: nowrap;
-               color: #fff;
-               padding: 15px;
-               .guest-room{
-                    font-size: 36px;
-                    
-                    font-weight: 700;
+               justify-content: space-between;
+               align-items: center;
+               .collections__line{
+                    width: 100%;
+                    background-color: #e2e2e2;
+                    height: 2px;
                }
-               .sofa{
-                    font-size: 60px;
-                    
-                    font-weight: 700;
-               }
-               .discount{
-                    font-size: 50px;
-                    border: 5px solid #fff ;
-                    padding: 10px;
-               }
-
-          }
-     }
-     .special__collection{
-          width: 50%;
-          margin-left: 25px;
-          .office__chair{
-               width: 100%;
-               height: 150px;
-               background-color: #e8edf7;
-               display: flex;
-               flex-direction: column;
-               flex-wrap: wrap;
-               text-align: center;
-               align-items: baseline;
-               justify-content: center;
-               align-content: center;
-               padding-right: 5px;
-               p{
-                    margin-bottom: 5px;
-               }
-               .office-chair-collection{
-
-                    font-size: 18px;
-               }
-               .office-chair{
-                    font-size: 30px;
-                    color: #000;
-                    span{
-                         font-weight: 700;
+               .circles{
+                    width: 90px;
+                    height: 15px;
+                    display: flex;
+                    margin-left: 35px;
+                    .circle{
+                         cursor: pointer;
+                         width: 5px;
+                         height: 5px;
+                         padding: 5px;
+                         margin-left: 15px;
+                         border-radius: 50%;
+                         background-color: #e2e2e2;
                     }
-               }
-               .office-chair-cost{
-                    color: #d58e32;
-                    font-size: 36px;
-               }
-          }
-          .special-collection{
-               
-               width: 100%;
-               height: 150px;
-               background-color: #fbf3f7;
-               margin-top: 27px;
-               display: flex;
-               align-content: flex-start;
-               flex-wrap: nowrap;
-               flex-direction: column;
-               align-items: flex-end;
-               justify-content: center;
-               padding-right: 5px;
-               p{
-                    margin-bottom: 10px;
-                    padding-right: 10px;
-               }
-               .special{
-                    color: #d58e32;
-                    font-size: 24px;
-                    span{
-                         font-weight: 700;
+                    .active{
+                         background-color: #d58e32;
                     }
-               }
-               .save{
-                    color: #000;
-                    font-size: 18px;
                }
           }
      }
+     .collections__container{
+          margin-top: 24px;
+          .collections__content{
+               display: flex;
+               margin-top: 20px;
+               .guest__room{
+                    width: 48.35%;
+                    height: 330px;
+                    background-color: #6a6a6a;
+                    position: relative;
+                    margin-left: 10px;
+                    img{
+                         width: 100%;
+                    }
+                    .guest__room__sofa{
+                         width: 85%;
+                         height: 250px;
+                         position: absolute;
+                         left: 30px;
+                         top: 25px;
+                         display: flex;
+                         flex-direction: column;
+                         align-content: space-around;
+                         justify-content: flex-end;
+                         align-items: flex-start;
+                         flex-wrap: nowrap;
+                         color: #fff;
+                         padding: 15px;
+                         img {
+                              width: 100%;
+                         }
+                         .guest-room{
+                              font-size: 36px;
+                              
+                              font-weight: 700;
+                         }
+                         .sofa{
+                              font-size: 60px;
+                              
+                              font-weight: 700;
+                         }
+                         .discount{
+                              font-size: 50px;
+                              border: 5px solid #fff ;
+                              padding: 10px;
+                         }
+          
+                    }
+               }
+
+          }
+          // .special__collection{
+          //      width: 50%;
+          //      margin-left: 25px;
+          //      .special__collection__office{
+          //           position: relative;
+          //           img{
+          //                width: 100%;
+          //                position: absolute;
+          //                top: 0;
+          //           }
+          //           .office__chair{
+          //                img{
+          //                     width: 100%;
+          //                     position: absolute;
+          //                     top: 0;
+          //                }
+          //                width: 100%;
+          //                height: 150px;
+          //                background-color: #e8edf7;
+          //                display: flex;
+          //                flex-direction: column;
+          //                flex-wrap: wrap;
+          //                text-align: center;
+          //                align-items: baseline;
+          //                justify-content: center;
+          //                align-content: center;
+          //                padding-right: 5px;
+          //                p{
+          //                     margin-bottom: 5px;
+          //                }
+          //                .office-chair-collection{
+          
+          //                     font-size: 18px;
+          //                }
+          //                .office-chair{
+          //                     font-size: 30px;
+          //                     color: #000;
+          
+          //                     span{
+          //                          font-weight: 700;
+          //                     }
+          //                }
+          //                .office-chair-cost{
+          //                     color: #d58e32;
+          //                     font-size: 36px;
+          //                }
+          //           }
+     
+          //           .special-collection{
+          //                img{
+          //                     width: 100%;
+          //                }
+          //                width: 100%;
+          //                height: 150px;
+          //                background-color: #fbf3f7;
+          //                margin-top: 27px;
+          //                display: flex;
+          //                align-content: flex-start;
+          //                flex-wrap: nowrap;
+          //                flex-direction: column;
+          //                align-items: flex-end;
+          //                justify-content: center;
+          //                padding-right: 5px;
+          //                p{
+          //                     margin-bottom: 10px;
+          //                     padding-right: 10px;
+          //                }
+          //                .special{
+          //                     color: #d58e32;
+          //                     font-size: 24px;
+          //                     span{
+          //                          font-weight: 700;
+          //                     }
+          //                }
+          //                .save{
+          //                     color: #000;
+          //                     font-size: 18px;
+          //                }
+          //           }
+          //      }
+          // }
+     }
+
 }
