--- a/client/src/components/ProductPage/ProductReview/styles/_product-review-header.scss
+++ b/client/src/components/ProductPage/ProductReview/styles/_product-review-header.scss
@@ -2,10 +2,7 @@
      border-bottom: 1px solid #c2c2c2;
      .product__review__items{
           display: flex;
-          
           .product__review__item{
-
-              
                font-size: 16px;
                font-weight: 500;
                margin: -1px;
@@ -15,8 +12,7 @@
                color: var(--black);
                background-color: var(--white);
                border: 1px solid #c2c2c2;
-
-
+               text-align: center;
                &:hover{
                     color: var(--orange);
                     cursor: pointer;
