refactoring the code

--- a/client/src/components/ProductPage/ProductReview/styles/_product-review-header.scss
+++ b/client/src/components/ProductPage/ProductReview/styles/_product-review-header.scss
@@ -19,6 +19,7 @@
                }
           }
           .active{
+               color: var(--orange);
                border-bottom: 1px solid var(--white);
           }
      }
