update the language .json files

--- a/client/src/components/Base/Admin/admin/styles/_orders-info.scss
+++ b/client/src/components/Base/Admin/admin/styles/_orders-info.scss
@@ -70,6 +70,9 @@
                .delivered_PS{
                     background-color: yellowgreen;
                }
+               .finished{
+                    background-color: rgb(123, 158, 54);
+               }
 
           }
      }
