--- a/client/src/components/Base/User/cabinet/user-orders/styles/user-orders.scss
+++ b/client/src/components/Base/User/cabinet/user-orders/styles/user-orders.scss
@@ -2,4 +2,10 @@
      display: flex;
      flex-direction: row;
      width: 80%;
+     .products__list{
+          width: 100%;
+          .order__list__container{
+               width: 91%;
+          }
+     }
 }
