--- a/client/src/components/Base/User/cabinet/user-orders/styles/user-orders.scss
+++ b/client/src/components/Base/User/cabinet/user-orders/styles/user-orders.scss
@@ -5,7 +5,10 @@
      .products__list{
           width: 100%;
           .order__list__container{
-               width: 91%;
+               width: 100%;
+               .order__list__header__item{
+                    font-size: .89em;
+               }
           }
      }
 }
