--- a/client/src/components/Home/LatestBlog/styles/_latest-blog-content.scss
+++ b/client/src/components/Home/LatestBlog/styles/_latest-blog-content.scss
@@ -44,6 +44,7 @@
                          position: absolute;
                          left: 0;
                          top: 0;
+                         border-radius: 50%;
                          &:hover{
                               background-color: #2a2a2a;
                               cursor: pointer;
@@ -59,7 +60,7 @@
                          position: absolute;
                          right:0;
                          top: 0;
-                         
+                         border-radius: 50%;
                          &:hover{
                               background-color: #2a2a2a;
                               cursor: pointer;
