--- a/client/src/components/ProductPage/ProductReview/ProductReviewItem/_product-review-item.scss
+++ b/client/src/components/ProductPage/ProductReview/ProductReviewItem/_product-review-item.scss
@@ -2,9 +2,17 @@
      display: flex;
      flex-direction: column;
      padding: 10px;
+     margin-top: 10px;
+
+     border-radius: 10px;
+     border: 3px solid var(--orange);
      .user__info{
           width: 10%;
           padding: 10px;
+          .time__review{
+               font-size: 14px;
+               padding: 5px 0;
+          }
      }
      .review__info{
           width: 75%;
