--- a/client/src/components/ProductPage/ProductReview/ProductReviewItem/_product-review-item.scss
+++ b/client/src/components/ProductPage/ProductReview/ProductReviewItem/_product-review-item.scss
@@ -6,18 +6,38 @@
 
      border-radius: 10px;
      border: 3px solid var(--orange);
-     .user__info{
-          width: 10%;
-          padding: 10px;
-          .time__review{
-               font-size: 14px;
-               padding: 5px 0;
+     .user__block{
+          display: flex;
+          align-items: center;
+          justify-content: flex-start;
+          flex-wrap: nowrap;
+          flex-direction: row;
+          .user__avatar{
+               img{
+                    width: 40px;
+                    height: 40px;
+               }
+
+          }
+          .user__info{
+               width: 50%;
+               padding: 10px;
+               .user__name{
+                    font-weight: 500;
+               }
+               .time__review{
+                    font-size: 14px;
+                    padding: 5px 0;
+               }
           }
      }
      .review__info{
           width: 75%;
           height: 75px;
           padding: 5px;
+          .product-rating{
+               margin-top: 0;
+          }
           .product__name{
                margin-top: 10px;
           }
