--- a/client/src/components/ProductPage/ProductReview/ProductReviewItem/_product-review-item.scss
+++ b/client/src/components/ProductPage/ProductReview/ProductReviewItem/_product-review-item.scss
@@ -8,20 +8,18 @@
      border: 3px solid var(--orange);
      .user__block{
           display: flex;
-          align-items: center;
-          justify-content: flex-start;
+          justify-content: space-between;
           flex-wrap: nowrap;
           flex-direction: row;
-          .user__avatar{
+          .user__info{
+               width: 50%;
+               padding: 10px;
+               display: flex;
+               gap: 10px;
                img{
                     width: 40px;
                     height: 40px;
                }
-
-          }
-          .user__info{
-               width: 50%;
-               padding: 10px;
                .user__name{
                     font-weight: 500;
                }
@@ -29,12 +27,45 @@
                     font-size: 14px;
                     padding: 5px 0;
                }
+
           }
      }
      .review__info{
-          width: 75%;
-          height: 75px;
+          width: 80%;
+          height: auto;
           padding: 5px;
+          margin-left: 3.5em;
+          .user__comment {
+               min-height: 50px;
+          }
+          .review__reply{
+               padding: 10px 0;
+               p{
+                    margin: 10px 0;
+               }
+               .reply {
+                    padding: 10px;
+                    background-color:var(--orange);
+                    min-height: 100px;
+                    border-radius:  10px;
+                    .reply__header{
+                         display: flex;
+                         align-items: flex-start;
+                         flex-direction: column;
+                         span{
+                              font-size: 14px;
+                         }
+                    }
+                    .reply__body{
+                         margin: 10px 0 ;
+                    }
+               }
+          }
+          img{
+               width: 100px;
+               height: auto;
+               margin-top: 15px;
+          }
           .product-rating{
                margin-top: 0;
           }
@@ -42,14 +73,5 @@
                margin-top: 10px;
           }
      }
-     .review_pictures{
-          width: 100%;
-          height: auto;
-          padding: 5px;
-          img{
-               width: 120px;
-               height: auto;
-               margin-left: 10px;
-          }
-     }
+     
 }
