--- a/client/src/components/Home/HotDealsCarousel/HotDeals/HotDealsContent/styles/_hot-deals-content.scss
+++ b/client/src/components/Home/HotDealsCarousel/HotDeals/HotDealsContent/styles/_hot-deals-content.scss
@@ -1,5 +1,19 @@
 .hot__deals__content{
-     
+     position: relative;
+     text-align: center;
+     .sale{
+          position: absolute;
+          top: 2%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          height: 20px;
+          width: 45px;
+          z-index: 99998;
+          border-radius: 0 0 15px 15px;
+          background-color: #2a2a2a;
+          color: #fff;
+          font-size: 12px;
+     }
      .hot-deals-picture{
           width: 100%;
           height: 220px;
@@ -83,6 +97,7 @@
                     font-weight: 500;
                     .product-link{
                          text-decoration: none;
+                         color: var(--black);
                     }
                }
           }
