--- a/client/src/components/Base/Admin/AdminOrders/styles/_orders-create-update-form.scss
+++ b/client/src/components/Base/Admin/AdminOrders/styles/_orders-create-update-form.scss
@@ -17,6 +17,7 @@
                align-items: center;
                flex-wrap: wrap;
                width: 50%;
+               min-height: 600px;
                margin-top: 30px;
                border: 3px solid var(--orange);
                border-radius: 10px;
@@ -26,22 +27,30 @@
                     width: 50%;
                     margin: 15px 0 0 0;
                     .current__order__infos{
+                         display: flex;
+                         gap: 10px;
+                         flex-wrap: wrap;
+                         justify-content: center;
+                         border: 1px solid var(--orange);
                          .current__order__info{
-                              border: 1px solid var(--orange);
+                              padding: 5px;
+                              display: flex;
+                              align-items: center;
                          }
                     }
                     .form__item__header{
                          margin-bottom: 5px;
                          
                     }
-                    img{
-                         width: 50px;
-                         height: auto;
+                    .form__item__content{
+                         img{
+                              width: 50px;
+                              height: auto;
+                         }
+
                     }
                     select, input, textarea{
                          font-size: 14px;
-
-                         
                          height: 30px;
                          width: 100%;
                          border-radius: 5px;
@@ -51,14 +60,20 @@
                          height: 50px;
                     }
                }
+               .form__item__save{
+                    text-align: center;
+               }
                .form__item__insert__picture{
                     margin-top: 50px;
                }
-               .product__save{
+               .form__item_list{
+                    height: auto;
+               }
+
+               .order__save{
                     width:100px;
                     height: 30px;
                     background-color: var(--orange);
-                    margin: 20px 0;
                     outline: 0;
                     cursor: pointer;
                }
