homepage bug fix first rev

--- a/client/src/components/Base/Header/styles/_login-register.scss
+++ b/client/src/components/Base/Header/styles/_login-register.scss
@@ -18,6 +18,9 @@
                     padding: 10px;
                }
           }
+          .register-hello{
+               cursor: pointer;
+          }
           .register__icon{
                fill: #fff;
           }
