--- a/client/src/components/Base/Modal/styles/_modal.scss
+++ b/client/src/components/Base/Modal/styles/_modal.scss
@@ -88,8 +88,8 @@
           top: 8%;
           .picture-block{
                img{
-                    width:100%;
-                    height: auto;
+                    // width:100%;
+                    // height: auto;
                }
           }
      }
