--- a/client/src/components/Base/Header/MenuBurger/styles/_menu-burger.scss
+++ b/client/src/components/Base/Header/MenuBurger/styles/_menu-burger.scss
@@ -38,5 +38,8 @@
                text-decoration: none;
                color: var(--white);
           }
+          &:hover{
+               background-color: var(--orange);
+          }
      }
 }
