--- a/client/src/components/Home/Special-Offers/styles/_mostest-products.scss
+++ b/client/src/components/Home/Special-Offers/styles/_mostest-products.scss
@@ -61,6 +61,7 @@
                          display: flex;
                          align-items: center;
                          margin-top: 5px;
+                         border: 1px solid var(--black);
                          .offer-button-item{
                               cursor: pointer;
                               display: flex;
