--- a/client/src/components/Base/Modal/styles/_modal.scss
+++ b/client/src/components/Base/Modal/styles/_modal.scss
@@ -85,24 +85,23 @@
           border-radius: 5px;
           position: absolute;
           left: 35%;
-          top: 8%;
+          top: 4%;
           .picture-block{
                img{
-                    // width:100%;
-                    // height: auto;
+                     width:100%;
+                     height: auto;
                }
           }
      }
      .button-block{
           position: absolute;
           top: 0;
-          right: 10%;
+          right: 7%;
           .modal__resize{
                position: fixed;
                background-image: url("http://eshopfinal.net/template/images/icons/resize-inner.svg");
                background-repeat: no-repeat;
                background-size: contain;
-               background-color: var(--white);
                width: 30px;
                height: 30px;
                cursor: pointer;
