--- a/client/src/components/ProductPage/BestSellers/styles/_newest-products-header.scss
+++ b/client/src/components/ProductPage/BestSellers/styles/_newest-products-header.scss
@@ -30,7 +30,7 @@
                     background-color: #e2e2e2;
                }
                .active{
-                    background-color: var(--black);
+                    background-color: var(--orange);
                }
           }
      }
