--- a/client/src/components/ProductPage/ProductReview/ProductReviewItem/_product-review-item.scss
+++ b/client/src/components/ProductPage/ProductReview/ProductReviewItem/_product-review-item.scss
@@ -6,6 +6,7 @@
 
      border-radius: 10px;
      border: 3px solid var(--orange);
+     min-height: 150px;
      .user__block{
           display: flex;
           justify-content: space-between;
